Fix SCCM File parsing
File is not always provided

--- a/feed/OPNAndConfiguration/TextLogConfiguration/DevicesAndLogs/SCCM.config
+++ b/feed/OPNAndConfiguration/TextLogConfiguration/DevicesAndLogs/SCCM.config
@@ -4,7 +4,7 @@ message SCCMLine with
 	EntryInfo 
 	{
         // Regex: Pass QE Check 8/12/2014
-		Regex = @"<!\[LOG\[(?<Message>.*)\]LOG]!><time=\x22(?<Time>.{14,16})\x22 date=\x22(?<Date>.{8,10})\x22\scomponent=\x22(?<Component>.*)\x22\scontext=\x22(?<Context>.*)\x22\stype=\x22(?<Type>.*)\x22\sthread=\x22(?<ThreadId>.*)\x22\sfile=\x22(?<File>.*):(?<LineNumber>.+)\x22>" 
+		Regex = @"<!\[LOG\[(?<Message>.*)\]LOG]!><time=\x22(?<Time>.{14,16})\x22 date=\x22(?<Date>.{8,10})\x22\scomponent=\x22(?<Component>.*)\x22\scontext=\x22(?<Context>.*)\x22\stype=\x22(?<Type>.*)\x22\sthread=\x22(?<ThreadId>.*)\x22\sfile=\x22((?<File>.*):(?<LineNumber>.+))?\x22>" 
 		, Priority = 0
 	}
 	: BaseNetLogon
